Fixed: wflow-consoleweb - Universal Theme - Header nav covered by userview name when the width is very narrow. @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/universal/css/dark.less
+++ b/wflow-consoleweb/src/main/webapp/universal/css/dark.less
@@ -12,6 +12,9 @@ header.navbar {
     background-color: @darkPrimary;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
 }
+header.navbar .header-nav {
+    background-color: @darkPrimary;
+}
 main .reset_position,
 main .grid-stack-item-header-action,
 a {
