--- a/wflow-consoleweb/src/main/webapp/universal/css/light.less
+++ b/wflow-consoleweb/src/main/webapp/universal/css/light.less
@@ -12,6 +12,9 @@ header.navbar {
     background-color: @primary;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
 }
+header.navbar .header-nav {
+    background-color: @primary;
+}
 main .reset_position,
 main .grid-stack-item-header-action,
 a {
